# data-pipeline

./: .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  README.md  watchdog.sh.in
documentation/: Makefile  main_en.tex  main_fr.tex
src/: file.c  file.h  file_test.c  glib.h  input.c  input.h  input_test.c  job.c  job.h  job_test.c  pipeline.c  pipeline.h  pipeline_test.c  store.c  store.h  store_test.c
